# local-splitter

./: .gitignore  AGENT.md  CITATION.cff  CLAUDE.md  FIRST_INSTRUCTION.md  LICENSE  Makefile  README.md  config.example.yaml  config.local-only.example.yaml  config.yaml  pyproject.toml
.agent/memory/: MEMORY.md  decisions.md  gotchas.md  next-steps.md  origin.md  user-profile.md
.github/workflows/: ci.yml
.resilient_write/: journal.jsonl
configs/: conservative.yaml  local-only-mcp.yaml  max-savings.yaml
configs/mcp/: conservative.yaml  max-savings.yaml  rag-heavy.yaml  recommended.yaml
configs/proxy/: rag-heavy.yaml  recommended.yaml
docs/: API.md  ARCHITECTURE.md  EVALUATION.md  EXTENSIONS.md  PAPER.md  TACTICS.md
evals/: config_eval.yaml  run_eval.py
evals/workloads/: gen_seed.py  wl1_edit.jsonl  wl2_explain.jsonl  wl3_chat.jsonl  wl4_rag.jsonl
examples/: openai_chat.sh
paper/: bibliography.bib  paper.bbl  paper.tex
paper/figures/: results_table.md
schemas/: mcp-tools.json
scripts/: gen_figures.py  trace_report.py
src/local_splitter/: __init__.py  cli.py  config.py
src/local_splitter/evals/: __init__.py  metrics.py  quality.py  report.py  runner.py  types.py
src/local_splitter/models/: __init__.py  (+5 more)
tests/: _fakes.py  test_config.py  test_evals.py  test_models_ollama.py  test_models_openai_compat.py  test_pipeline.py  test_pipeline_compress.py  test_pipeline_draft.py  test_pipeline_remaining.py  test_pipeline_route.py  test_pipeline_sem_cache.py  test_smoke.py  test_transport_http.py  test_transport_mcp.py
tests/integration/: test_ollama_live.py
(+14 files in other folders)
