[project]
name = "local-splitter"
version = "0.1.0"
description = "MCP shim that splits coding-agent LLM requests between a local small model and a cloud model using seven independently-togglable tactics."
authors = [
    { name = "Justice Owusu Agyemang", email = "jay@sperixlabs.org" },
    { name = "Jerry John Kponyo", email = "jjkponyo.soe@knust.edu.gh" },
    { name = "Elliot Amponsah", email = "eamponsah52@st.knust.edu.gh" },
    { name = "Godfred Manu Addo Boakye", email = "gmaboakye@st.knust.edu.gh" },
    { name = "Kwame Opuni-Boachie Obour Agyekum", email = "kooagyekum@knust.edu.gh" },
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "llm", "local-first", "tokens", "ollama", "openai-compatible"]
dependencies = [
    "httpx>=0.27",
    # MCP SDK — pin tight per .agent/memory/gotchas.md (SDK has changed shape more than once).
    "mcp>=1.2,<2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlite-vec>=0.1.1",
]

[project.scripts]
local-splitter = "local_splitter.cli:app"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_splitter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
